# yarp

.github/workflows/: ci.yml
bindings/: yarp.i
cmake/: YarpChooseIDL.cmake  YarpDeviceParamsGenerator.cmake  YarpIDL.cmake
doc/release/: v4_0_0.MD
doc/release/master/: laserDevicesRefactored.md
example/dev/grabber_crop/: grabber_crop.cpp
src/devices/: CMakeLists.txt
src/devices/AnalogSensorNWS/: AnalogSensor_nws_yarp.cpp  AnalogSensor_nws_yarp.h  CMakeLists.txt
src/devices/ControlBoardClient/: CMakeLists.txt  ControlBoard_nwc_yarp.cpp  ControlBoard_nwc_yarp.h  ControlBoard_nwc_yarp_LogComponent.cpp  ControlBoard_nwc_yarp_LogComponent.h  stateExtendedReader.cpp
src/devices/ControlBoardWrapper/: CMakeLists.txt  ControlBoardWrapper.cpp  ControlBoardWrapper.h  ControlBoard_nws_ros.cpp  ControlBoard_nws_yarp.cpp  ControlBoard_nws_yarp.h  RPCMessagesParser.cpp  RPCMessagesParser.h
src/devices/IControBoardMsgs/: CMakeLists.txt  IControlModeMsgs.thrift
src/devices/ILocalization2DMsgs/: ILocalization2DMsgs.thrift
src/devices/IMap2DMsgs/: IMap2DMsgs.thrift
src/devices/INavigation2DMsgs/: INavigation2DMsgs.thrift
src/devices/ISpeechSynthesizerMsgs/: ISpeechSynthesizerMsgs.thrift
src/devices/RGBDSensorWrapper/: RgbdSensor_nws_yarp.cpp  RgbdSensor_nws_yarp.h
src/devices/Rangefinder2DClient/: Rangefinder2DClient.cpp  Rangefinder2DClient.h
src/devices/Rangefinder2DWrapper/: Rangefinder2DWrapper.cpp  Rangefinder2DWrapper.h  Rangefinder2D_nws_ros.h  Rangefinder2D_nws_yarp.cpp  Rangefinder2D_nws_yarp.h
src/devices/RemoteControlBoard/: RemoteControlBoard.cpp  RemoteControlBoard.h  stateExtendedReader.cpp  stateExtendedReader.h
src/devices/audioPlayerWrapper/: AudioPlayerWrapper.cpp
src/devices/audioRecorderWrapper/: AudioRecorderWrapper.cpp
src/devices/controlBoardRemapper/: ControlBoardRemapper.cpp  ControlBoardRemapper.h
src/devices/fakeLaser/: fakeLaser.cpp
src/devices/fakeLaserWithMotor/: fakeLaserWithMotor.h  fakeLaserWithMotor_motors.cpp
src/devices/fakeLocalizerDevice/: fakeLocalizerDev.cpp  fakeLocalizerDev.h
src/devices/fakeMotionControl/: fakeMotionControl.cpp  fakeMotionControl.h
src/devices/fakeMotionControlMicro/: fakeMotionControlMicro.cpp  fakeMotionControlMicro.h
src/devices/fakeOdometry/: FakeOdometry.cpp  FakeOdometry.h
src/devices/fakeSpeechTranscription/: fakeSpeechTranscription.cpp  fakeSpeechTranscription.h
src/devices/fakebot/: FakeBot.h
src/devices/frameGrabberCropper/: FrameGrabberCropper.h
src/devices/frameTransformClient/: CMakeLists.txt  FrameTransformClient.cpp  FrameTransformClient.h  FrameTransform_nwc_yarp.cpp  FrameTransform_nwc_yarp.h
src/devices/frameTransformClient/robotinterface_xml/: ftc_yarp_only.xml
src/devices/frameTransformGet/: FrameTransformGet_nwc_yarp.cpp  FrameTransformGet_nwc_yarp.h  FrameTransformGet_nws_yarp.cpp  FrameTransformGet_nws_yarp.h
src/devices/frameTransformManager/: CMakeLists.txt  FrameTransformManager.cpp  FrameTransformManager.h
src/devices/frameTransformMsgs/: CMakeLists.txt  frameTransformMsgs.thrift
src/devices/frameTransformServer/: CMakeLists.txt  FrameTransform_nws_ros.cpp  FrameTransform_nws_ros.h  FrameTransform_nws_yarp.cpp  FrameTransform_nws_yarp.h
src/devices/frameTransformSet/: FrameTransformSetMultiplexer.cpp
src/devices/frameTransformStorage/: FrameTransformStorage.cpp  FrameTransformStorage.h
src/devices/frameTransformStorageMsgs/: frameTransformStorageMsgs.thrift
src/devices/laserFromExternalPort/: laserFromExternalPort.cpp  laserFromExternalPort.h
src/devices/laserFromRosTopic/: LaserFromRosTopic.cpp  LaserFromRosTopic.h
src/devices/laserHokuyo/: laserHokuyo.cpp  laserHokuyo.h
src/devices/localization2DClient/: CMakeLists.txt  Localization2DClient.cpp  Localization2DClient.h  Localization2D_nwc_yarp.cpp  Localization2D_nwc_yarp.h
src/devices/localization2DServer/: CMakeLists.txt  ILocalization2DServerImpl.cpp  ILocalization2DServerImpl.h  Localization2DServer.cpp  Localization2DServer.h  Localization2D_nws_ros.h  Localization2D_nws_yarp.cpp  Localization2D_nws_yarp.h
src/devices/map2DClient/: Map2DClient.cpp  Map2DClient.h
src/devices/map2DServer/: Map2DServer.cpp  Map2DServer.h  Map2DServerImpl.cpp  Map2DServerImpl.h
src/devices/messages/: CMakeLists.txt
src/devices/mobileBaseVelocityControl/: MobileBaseVelocityControl_nws_yarp.cpp  MobileBaseVelocityControl_nws_yarp.h
src/devices/multipleAnalogSensorsMsgs/: multipleAnalogSensorsSerializations.thrift
src/devices/multipleanalogsensorsclient/: MultipleAnalogSensorsClient.cpp  MultipleAnalogSensorsClient.h
src/devices/multipleanalogsensorsserver/: MultipleAnalogSensorsServer.cpp  MultipleAnalogSensorsServer.h
src/devices/navigation2DClient/: CMakeLists.txt  Navigation2DClient.cpp  Navigation2DClient.h  Navigation2DClient_iLocalization2D.cpp  Navigation2DClient_iMap2D.cpp  Navigation2DClient_iNav2DCtrl.cpp  Navigation2D_nwc_yarp.h  Navigation2D_nwc_yarp_iLocalization2D.cpp
src/devices/navigation2DServer/: INavigation2DServerImpl.cpp  INavigation2DServerImpl.h  navigation2DServer.cpp  navigation2D_nws_yarp.cpp
src/devices/networkWrappers/: CMakeLists.txt
src/devices/odometry2D/: Odometry2D_nws_ros.cpp  Odometry2D_nws_yarp.cpp  Odometry2D_nws_yarp.h
src/devices/ovrheadset/: TextureBattery.cpp
src/libYARP_dev/: CMakeLists.txt
src/yarpDeviceParamParserGenerator/: CMakeLists.txt  generate_cpp_functions.cpp  generate_h_functions.cpp  generate_ini.cpp  generate_md.cpp  generate_yarpdev.cpp  generate_yarprobotinterface.cpp  generator.h  paramGroupTree.cpp  parameter.cpp  parse_ini.cpp  parse_md.cpp
src/yarphear/: yarphear.cpp
src/yarpmobilebasegui/: display.cpp  display.h  joywidget.h
src/yarpmotorgui/: partitem.cpp
tests/: CMakeLists.txt
tests/libYARP_OS/: PortTest.cpp
tests/libYARP_dev/: IFrameTransformTest.cpp  INavigation2DTest.cpp  INavigation2DTest.h  MapGrid2DTest.cpp  Navigation2DnwcTest.cpp  TransformClientTest.cpp
tests/libYARP_math/: Vec2DTest.cpp
tests/libYARP_os/: PropertyTest.cpp
tests/yarpidl_thrift/: CMakeLists.txt
(+363 files in other folders)
